--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-<div class="card">
+<div class="select">
   <h2>เช็คชื่อพนักงาน</h2>
 
   <div class="login-line">Log in with LINE Business ID</div>
@@ -201,6 +201,7 @@
 </script>
 </body>
 </html>
+
 
 
 
