--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <div class="login-line">Log in with LINE Business ID</div>
 
-  <div class="dropdown">
+  <div class="select">
     <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
     <div class="dropdown-content" id="employeeList">
       <!-- รายชื่อพนักงานจะใส่ script -->
@@ -201,6 +201,7 @@
 </script>
 </body>
 </html>
+
 
 
 
