--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 </head>
 <body>
 
-<div class="select">
+<div class="card">
   <h2>เช็คชื่อพนักงาน</h2>
 
   <div class="login-line">Log in with LINE Business ID</div>
 
-  <div class="select">
+  <div class="dropdown">
     <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
     <div class="dropdown-content" id="employeeList">
       <!-- รายชื่อพนักงานจะใส่ script -->
@@ -125,6 +125,7 @@
   </div>
 
   <textarea id="note" placeholder="รายละเอียดเพิ่มเติม (ไม่บังคับ)"></textarea>
+
   <button class="btn">เช็คชื่อเข้า</button>
   <div id="result"></div>
 
@@ -136,6 +137,7 @@
     </div>
   </footer>
 </div>
+
 
 <audio id="successSound" src="https://firebasestorage.googleapis.com/v0/b/sekkport.appspot.com/o/new-notification-015-363677.mp3?alt=media&token=74f2ee1e-021a-4306-9d18-fcbe5d06291b"></audio>
 <audio id="errorSound" src="https://www.soundjay.com/buttons/sounds/button-10.mp3"></audio>
@@ -201,6 +203,7 @@
 </script>
 </body>
 </html>
+
 
 
 
