--- a/index.html
+++ b/index.html
@@ -1,98 +1,149 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>เช็คชื่อพนักงาน</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
-
- /* ===== Body (จัดกลางทั้งแนวตั้ง/แนวนอน) ===== */
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ระบบเช็คชื่อเข้า-ออกงาน</title>
+  <style>
+    /* ===== Body ===== */
     body {
       margin: 0;
-      padding: 20px;
+      padding: 0;
       font-family: 'Kanit', sans-serif;
       background-color: #fff;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      overflow: hidden;
+    }
+
+    /* ===== Card ===== */
+    .card {
+      width: 95%;
+      max-width: 500px;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      background-color: #fff;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
       box-sizing: border-box;
     }
 
     /* ===== Header ===== */
     h2 {
+      text-align: center;
       color: #06C755;
       font-weight: 700;
-      margin-bottom: 20px;
-      text-align: center;
+      margin-top: 0;
     }
 
     /* ===== LINE Login ===== */
     .login-line {
       font-weight: 700;
       color: #000;
-      width: 100%;
-      max-width: 400px;
-      margin-bottom: 10px;
       text-align: left;
+      margin-bottom: 10px;
+      background: none; /* ไม่มีกรอบ */
+      border: none;
     }
 
-    /* ===== Dropdown / Textarea ===== */
-    select, textarea {
+    /* ===== Dropdown ===== */
+    .dropdown {
+      position: relative;
       width: 100%;
-      max-width: 400px;
+    }
+
+    .dropdown-btn {
+      width: 100%;
       padding: 15px;
-      margin-bottom: 15px;
-      border: 1.5px solid #ccc;     /* เส้นขอบ */
-      border-radius: 10px;          /* ขอบโค้งมน */
+      border-radius: 12px;
+      border: 1px solid #ccc;
       font-size: 1rem;
-      background: #f9f9f9;          /* พื้นหลังจางๆ */
-      outline: none;
+      cursor: pointer;
+      background-color: #f9f9f9;
       box-sizing: border-box;
     }
 
-    select:focus, textarea:focus {
-      border: 1.5px solid #06C755;  /* เน้นสีเขียวตอนเลือก */
-      background: #fff;
+    .dropdown-btn:hover {
+      background-color: #e0f4d9;
     }
 
-    /* Placeholder ให้เป็นสีเทาบางๆ */
-    textarea::placeholder {
-      color: #aaa;
-      font-style: italic;
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      max-height: 200px;
+      overflow-y: auto;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      z-index: 100;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
 
+    .dropdown-content div {
+      padding: 12px 20px;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    .dropdown-content div:hover {
+      background-color: #06C755;
+      color: #fff;
+    }
+
+    /* ===== Textarea ===== */
     textarea {
+      width: 100%;
+      padding: 15px;
+      border-radius: 12px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
       resize: none;
-      height: 80px;
+      height: 120px;
+      box-sizing: border-box;
     }
 
     /* ===== Button ===== */
     .btn {
-      width: 100%;
-      max-width: 400px;
       padding: 15px;
+      border-radius: 12px;
       border: none;
-      border-radius: 10px;
       background-color: #06C755;
       color: #fff;
       font-size: 1.2rem;
       font-weight: 700;
       cursor: pointer;
-      margin-top: 10px;
+      transition: 0.3s;
     }
 
     .btn:hover {
       background-color: #049645;
     }
 
+    /* ===== Result ===== */
+    #result {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+
+    .success { color: green; }
+    .error { color: red; }
+
     /* ===== Footer ===== */
     footer {
-      margin-top: 30px;
+      margin-top: auto;
       font-size: 0.85rem;
       color: #666;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
       text-align: center;
     }
 
@@ -105,38 +156,34 @@
     footer a:hover {
       text-decoration: underline;
     }
-
-
-
-</style>
+  </style>
 </head>
 <body>
+  <div class="card">
+    <h2>เช็คชื่อพนักงาน</h2>
 
-<div class="card">
-  <h2>เช็คชื่อพนักงาน</h2>
+    <div class="login-line">Log in with LINE Business ID</div>
 
-  <div class="login-line">Log in with LINE Business ID</div>
-
-  <div class="dropdown">
-    <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
-    <div class="dropdown-content" id="employeeList">
-      <!-- รายชื่อพนักงานจะใส่ script -->
+    <div class="dropdown">
+      <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
+      <div class="dropdown-content" id="employeeList">
+        <!-- รายชื่อพนักงานจะใส่ script -->
+      </div>
     </div>
+
+    <textarea id="note" placeholder="รายละเอียดเพิ่มเติม (ไม่บังคับ)"></textarea>
+
+    <button class="btn">เช็คชื่อเข้า</button>
+    <div id="result"></div>
+
+    <footer>
+      <div>About Business ID</div>
+      <div>
+        <a href="#">Help</a> |
+        <a href="#">Terms of Use</a>
+      </div>
+    </footer>
   </div>
-
-  <textarea id="note" placeholder="รายละเอียดเพิ่มเติม (ไม่บังคับ)"></textarea>
-
-  <button class="btn">เช็คชื่อเข้า</button>
-  <div id="result"></div>
-
-  <footer>
-    <div>About Business ID</div>
-    <div>
-      <a href="#">Help</a> |
-      <a href="#">Terms of Use</a>
-    </div>
-  </footer>
-</div>
 
 
 <audio id="successSound" src="https://firebasestorage.googleapis.com/v0/b/sekkport.appspot.com/o/new-notification-015-363677.mp3?alt=media&token=74f2ee1e-021a-4306-9d18-fcbe5d06291b"></audio>
@@ -203,6 +250,7 @@
 </script>
 </body>
 </html>
+
 
 
 
