--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <audio id="errorSound" src="https://www.soundjay.com/buttons/sounds/button-10.mp3"></audio>
 
   <script>
-    const deploymentURL = 'YOUR_DEPLOYMENT_URL_HERE'; // ใส่ URL ของ Web App GAS
+    const deploymentURL = 'https://script.google.com/macros/s/AKfycbxeI_8mx6kjznc5NuJ1u59dCP2dAFgFwLUUOHr06TjpnlKrfkg2ffMYdV1GvLGxtLEC/exec'; // ใส่ URL ของ Web App GAS
 
     let selectedStaffId = '';
     let selectedStaffName = '';
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
