--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
   </div>
 
-  <textarea id="note" placeholder="รายละเอียดเพิ่มเติม (ไม่บังคับ)"></textarea>
+  <textarea id="note" placeholder="รายละเอียดเพิ่มเติม"></textarea>
   <button class="btn" onclick="checkInEmployee()">เช็คชื่อเข้า</button>
   <div id="result"></div>
 
@@ -242,4 +242,5 @@
 
 </body>
 </html>
+
 
