--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 </head>
 <body>
 
-  <h2>เช็คชื่อพนักงาน</h2>
-  <div class="login-line">Log in with LINE Business ID</div>
+  <h1>Attendance ID</h1>
+  <div class="login-line">Check in name ID</div>
 
   <div class="dropdown">
     <div class="dropdown-btn" id="dropdownBtn">-- เลือกชื่อเจ้าหน้าที่ --</div>
@@ -242,5 +242,6 @@
 
 </body>
 </html>
+
 
 
